--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,19 +8,20 @@ on: [push, pull_request]
 jobs:
   code_quality:
     name: Code Quality
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
 
       - name: Install rust toolchain
-        uses: dtolnay/rust-toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           components: clippy, rustfmt
 
       - name: Install latest just release
-        uses: extractions/setup-just@v1
+        uses: taiki-e/install-action@v1
+        with:
+          tool: just
 
       - name: Install latest dprint release
         uses: taiki-e/install-action@v1
@@ -41,13 +42,13 @@ jobs:
 
   msrv:
     name: Minimum Supported Rust Version
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
 
       - name: Install rust toolchain (v${{ env.MIN_SUPPORTED_RUST_VERSION }})
-        uses: dtolnay/rust-toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ env.MIN_SUPPORTED_RUST_VERSION }}
 
@@ -55,7 +56,9 @@ jobs:
         uses: taiki-e/install-action@nextest
 
       - name: Install latest just release
-        uses: extractions/setup-just@v1
+        uses: taiki-e/install-action@v1
+        with:
+          tool: just
 
       - name: Cache
         uses: Swatinem/rust-cache@v2
@@ -70,23 +73,19 @@ jobs:
       fail-fast: false
       matrix:
         job:
-          - { os: ubuntu-20.04, target: x86_64-unknown-linux-gnu    }
-          - { os: ubuntu-20.04, target: x86_64-unknown-linux-musl   , use-cross: true }
+          - { os: ubuntu-22.04, target: x86_64-unknown-linux-gnu    }
+          - { os: ubuntu-22.04, target: x86_64-unknown-linux-musl   , use-cross: true }
           - { os: macos-12    , target: x86_64-apple-darwin         }
-          - { os: windows-2019, target: x86_64-pc-windows-msvc      }
+          - { os: windows-2022, target: x86_64-pc-windows-msvc      }
 
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           target: ${{ matrix.job.target }}
-
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
 
       - name: Show version information
         shell: bash
